# practice

./: .gitignore  125_BackpackII.py  125_BackpackIII.py  656_bigIntMultiply.py  669_CoinChange.py  740_CoinChange2.py  92_Backpack.py  LRUCache.py  README.md  TSM.py  akuna_BaterMarket.py  akuna_FindMedian.py  akuna_PalindromeDates.py  akuna_ParsingWords.py  akuna_SplitTheArray.py  bringing-a-gun-to-a-guard-fight.py  escape-pods.py  fuel-injection-perfection.py  split-string.py  the-grandest-staircase-of-them-all.py  try_out.py  wordBreak3.py
C++/STL_practice/: CMakeLists.txt  LRUCache.cpp  LRUCache.h  main.cpp  tests.cpp  tests.h
C++/threading/: CMakeLists.txt  main.cpp
notes/: 5 - 容器之分类与各种测试（三）.md  7 - 分配器 - Allocator.md  Implement strStr().md  README.md
notes/Lintcode_C++/: 1343_SumofTwoStrings.cpp  1375_SubstringWithAtLeastKDistinctCharacters.cpp  1870_NumberofSubstringswithAllZeroes.cpp  56_TwoSum.cpp  574_BuildPostOffice.cpp  59_3SumClosest.cpp  610_TwoSumDifferenceEqualsToTarget.cpp  64_MergeSortedArray.cpp  CMakeLists.txt  all.h  main.cpp
notes/Lintcode_python/: 10_StringPermutationII.py  132_WordSearchII.py  138_SubarraySum.py  148_SortColors.py  57_3Sum.py  (+20 more)
python/: 139_LC_WordBreak.py  515_PaintHouse.py  562_BackpackIV.py  563_BackpackV.py  DRW_coins.py  ExpendingNebula.py  ExpendingNebula_2.py  IonFluxRelabeling.py  LongestPalindromicSubsequence.py  Regular-Expression-Matching.py  ThreeChains.py  Triangle.py  WildcardMatching.py  akuna_ArrayJourney.py  asd.py  cheat.py  doomsday-fuel.py  expanding-nebula.py  re-id.py  try.py  wordBreak.py  wordBreak2.py
(+6 files in other folders)
